# plset

./: LICENSE  README.md  pyproject.toml
src/plset/: cli.py
tests/: test_operations.py
